--- a/PetMate/src/components/loginOng.css
+++ b/PetMate/src/components/loginOng.css
@@ -25,8 +25,8 @@
 }
 
 .img_cachorro{
-    height: 800px;
-    margin-top: 9em;
+    /* height: 800px; */
+    /* margin-top: 9em; */
 }
 .img-login{
     height: 100vh;
