--- a/PetMate/src/components/CardContainer.css
+++ b/PetMate/src/components/CardContainer.css
@@ -3,12 +3,14 @@
   text-align: center;
 }
 
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
   gap: 80px;
   justify-content: center;
 }
+
 
 .pet-card {
   width: 350px;
@@ -22,9 +24,11 @@
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
+
 .pet-card:hover {
   transform: scale(1.02);
 }
+
 
 .pet-image {
   width: 100%;
@@ -32,10 +36,12 @@
   object-fit: cover;
 }
 
+
 .pet-info-card {
   padding: 15px;
   text-align: center;
 }
+
 
 .pet-info-card h3 {
   font-size: 20px;
@@ -43,11 +49,6 @@
   color: #333;
 }
 
-.pet-info-card p {
-  font-size: 18px;
-  margin: 5px 0;
-  color: black;
-}
 
 .botoes-card {
   display: flex;
@@ -55,6 +56,7 @@
   justify-content: center;
   gap: 10px;
 }
+
 
 .botao-info-pet {
   cursor: pointer;
@@ -72,6 +74,7 @@
   /* margin-left: 45px; */
 }
 
+
 .favorito-icon {
   width: 35px;
   height: 35px;
@@ -81,31 +84,95 @@
   transition: transform 0.3s ease;
 }
 
+
 .favorito-icon:hover {
   transform: scale(1.2);
 }
-.p-favoritos{
+
+.p-favoritos {
   font-size: 20px;
 }
 
-.estrela-preenchida, .estrela-vazia{
+
+.estrela-preenchida,
+.estrela-vazia {
   font-size: 34px;
   color: #e8c41c;
 
+
 }
 
-.sem-pets-filtro {
-  font-size: 24px;
-  font-weight: bold;
-  color: #84644D;
-  text-align: center;
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #F6F4F1;
-  border: 2px solid #AD947E;
-  border-radius: 8px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
-  max-width: 500px;
-  margin-left: auto; 
-  margin-right: auto;
+
+@media (max-width: 768px) {
+
+
+  .pets-container {
+    padding: 20px;
+  }
+
+
+  .card-container {
+    gap: 20px;
+  }
+
+
+  .pet-card {
+    width: 100%;
+    height: auto;
+    max-width: 360px;
+  }
+
+
+  .pet-image {
+    max-height: 100px;
+    width: 100%;
+  }
+
+  .pet-info-card h3 {
+    font-size: 16px;
+  }
+
+
+  .pet-info-card {
+    padding: 0;
+  }
+
+
+  .pet-info-card p {
+    font-size: 14px;
+  }
+
+
+  .texto-card {
+    font-size: 14px;
+  }
+
+
+  .botao-info-pet {
+    height: 20px;
+  }
+
+
+  .estrela-vazia,
+  .estrela-preenchida {
+    font-size: 22px;
+    margin-right: -19px;
+  }
+
+
+  .botao-info-pet {
+    font-size: 12px;
+    margin-right: -15%;
+    border-radius: 4px;
+    width: fit-content;
+    padding: 0px 5px 0px 5px;
+  }
+  .pet-info-card h4 {
+    font-size: 14px;
+  }
+
+  .texto-card h4{
+    font-size: 14px;
+  }
+
 }
