--- a/PetMate/src/pages/PerfilAdm.css
+++ b/PetMate/src/pages/PerfilAdm.css
@@ -3,35 +3,66 @@
     min-height: 100vh;
 }
 
+
+/* Navbar Normal */
 .NavbarAdm{
     display: flex;
-    flex-direction: row;
-    min-width: 100vw;
     align-items: center;
     justify-content: space-between;
+    
+    min-width: 100vw;
     padding: 10px;
     height: 120px;
     background-color: #84644D;
     border-bottom-left-radius: 40px;
     border-bottom-right-radius: 40px;
 }
-
+.nav-side {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+.nav-center {
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-imgAdm {
+    width: 120px;
+}
+.nav-imgAdm:hover {
+    cursor: pointer;
+}
 .painelAdministrativo{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 35px;
     color: #FBFBFB;
     text-decoration: none;
     font-family: 'nunito', sans-serif;
     font-weight: bold;
+    margin: 0;
+}
+.iconAdmTools{
+    color: #543A28;
+    font-size: 30px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
+
+/* Segunda Navbar (com links) */
 .NavbarAdm-links{
+    display: flex;
+    justify-content: center;
+}
+.NavbarAdm-links2{
     display: flex;
     width: 70%;
     align-items: center;
     justify-content: center;
-    margin-left: 280px;
     padding: 10px;
     height: 110px;
     background-color: #FBFBFB;
@@ -43,7 +74,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 200px;
+    gap: 150px;
     min-width: 100vw;
 }
 .linksAdm{
@@ -53,26 +84,54 @@
     font-weight: bold;
     transition: color 0.5s;
 }
-.linksAdm:hover {
+.iconAdm1{
+    color: #543A28;
+    font-size: 30px;
+    margin-right: 10px;
+}
+.iconAdm2{
+    color: #543A28;
+    font-size: 30px;
+    margin-right: 10px;
+}
+.iconAdm3{
+    color: #543A28;
+    font-size: 30px;
+    margin-right: 10px;
+}
+.iconAdm4{
+    color: #543A28;
+    font-size: 30px;
+    margin-right: 10px;
+}
+.icon-link1:hover{
     transform: scale(1.05);
     transition: 0.2s;
     cursor: pointer;
 }
-/* .linksAdm.active {
-    font-weight: 700;
-    color: #fbfbfb;
-    border-bottom: 2px solid #fbfbfb; 
-} */
-.iconAdm{
-    color: #543A28;
-    font-size: 30px;
-    margin-top: 10px;
+.icon-link2:hover{
+    transform: scale(1.05);
+    transition: 0.2s;
+    cursor: pointer;
+}
+.icon-link3:hover{
+    transform: scale(1.05);
+    transition: 0.2s;
+    cursor: pointer;
+}
+.icon-link4:hover{
+    transform: scale(1.05);
+    transition: 0.2s;
+    cursor: pointer;
 }
 
+
+/* Título (gerenciamento) */
 .h2Adm{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     margin-bottom: 20px;
     color: #FBFBFB;
     text-decoration: none;
@@ -80,6 +139,8 @@
     font-weight: bold;
 }
 
+
+/* Container onde o ADM poderá gerenciar */
 .containeradm{
     display: flex;
     justify-content: center;
