--- a/PetMate/src/components/BarraFiltro.css
+++ b/PetMate/src/components/BarraFiltro.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: fit-content;
     gap: 10px;
 }
 
@@ -22,6 +23,7 @@
     font-size: 20px;
     font-family: Raleway;
     font-weight: 500;
+    text-align: center;
 }
 
 .filtro-container select {
@@ -36,6 +38,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     outline: none;
+    text-align: center;
 }
 
 .filtro-container select:hover {
@@ -100,7 +103,9 @@
 .botao-fav-on:hover{
     background-color: #d3bc58;
 }
-
+#selectGenero {
+    width: fit-content;
+}
 .estrela-bnt {
     display: flex;
     justify-content: center;
