--- a/PetMate/src/components/CardOng.css
+++ b/PetMate/src/components/CardOng.css
@@ -79,3 +79,20 @@
     cursor: pointer;
     transition: 0.5s ease;
 }
+
+/* Mensagem de Ong não encontrada */
+.sem-ONGs{
+  font-size: 24px;
+  font-weight: bold;
+  color: #84644D;
+  text-align: center;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #F6F4F1;
+  border: 2px solid #AD947E;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
