subindo com git push, por causa que o pc bugou :(

--- a/PetMate/src/components/PerfilOng.css
+++ b/PetMate/src/components/PerfilOng.css
@@ -19,3 +19,10 @@
     flex-direction: row;
     width: 100%;
 }
+
+.texto-e-botao{
+    display: flex;
+    flex-direction: row;
+    gap: 53%;
+    border: solid;
+}
