--- a/PetMate/src/pages/PerfilAdm.css
+++ b/PetMate/src/pages/PerfilAdm.css
@@ -40,7 +40,7 @@
     font-size: 35px;
     color: #FBFBFB;
     text-decoration: none;
-    font-family: 'nunito', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: bold;
     margin: 0;
 }
