--- a/PetMate/src/components/UsersAdm.css
+++ b/PetMate/src/components/UsersAdm.css
@@ -15,7 +15,7 @@
 }
 
 .user-card {
-    width: 250px;
+    width: 15%;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
