--- a/PetMate/src/components/ModalEditarPet.css
+++ b/PetMate/src/components/ModalEditarPet.css
@@ -24,7 +24,7 @@
     /* max-width: 600px; */
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
-    border: 1px solid #3d2b1e;
+    /* border: 1px solid #3d2b1e; */
     justify-content: center;
     margin-top: 20px;
     padding-bottom: 30px;
