--- a/PetMate/src/pages/Perfil.css
+++ b/PetMate/src/pages/Perfil.css
@@ -49,8 +49,34 @@
     align-items: center;
 }
 
-.user-icon {
+.user-icon-perfil {
     font-size: 80px;
+    color: #84644D;
+    /* border: solid; */
+    /* border-radius: 50px; */
+    /* padding-left: 10px; */
+}
+
+.user-icon-container {
+    display: flex;
+    width: 100%;
+    height: 15%;
+    margin: 0 auto;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative; 
+}
+
+.icon-trash-container {
+    position: absolute;
+    top: 50%;
+    right: 450px;
+    transform: translateY(-50%);
+}
+
+.icon-trash {
+    font-size: 24px;
     color: #84644D;
 }
 
